[package]
name = "atom-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http-body = "1.0.0-rc.2"
http-body-util = "0.1.0-rc.2"

log = "0.4"
uuid = { version = "1.0", features = ["v4"] }
bytes = "1.0"
hyper = { version = "1.0.0-rc.3", features = ["full"] }
futures-util = "0.3.14"

pin-project-lite = "0.2.7"
sync_wrapper = "0.1.1"