[package]
name = "atom-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http-body = "1.0.0-rc.2"
http-body-util = "0.1.0-rc.2"
httpdate = "1.0.2"
pin-project = "1.0.0"
thiserror = "1.0"
log = "0.4"
uuid = { version = "1.0", features = ["v4"] }
bytes = "1.0"
hyper = { version = "1.0.0-rc.3", features = ["full"] }
futures-util = "0.3.14"
serde = { version = "1.0", features = ["derive"]}
time = {version = "0.3.21", default-features = false, features = ["std", "formatting", "macros"]}
mime = "0.3.17"
mime_guess = "2.0"
anyhow = "1.0"
cookie = "0.17"
percent-encoding = "2.1"
tokio-rustls = { version = "0.23.4" }
num_cpus = "1.8"
regex = "1.0"
syn = "2.0"
quote = "1.0"
pin-project-lite = "0.2.7"
sync_wrapper = "0.1.1"

tokio = { version = "1.28", features = ["net", "rt-multi-thread", "time", "fs", "io-util"] }

