[package]
name = "atom-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atom-derive = { path = "../atom-derive", version = "0.1.0" }

bincode="0.9.2"
http-body = "1.0.0-rc.2"
http-body-util = "0.1.0-rc.2"
hyper = { version = "1.0.0-rc.3", features = ["full"] }
reqwest = {version = "0.11.13", features = ["json"]}
httpdate = "1.0.2"
pin-project = "1.0.0"
thiserror = "1.0"
log = "0.4"
uuid = { version = "1.0", features = ["v4"] }
bytes = "1.0"
rand_chacha = "0.3.1"
regex = "1.7.1"
linked-hash-map="0.5.6"
futures-util = "0.3.14"
serde = { version = "1.0", features = ["derive"]}
time = {version = "0.3.21", default-features = false, features = ["std", "formatting", "macros"]}
mime = "0.3.17"
mime_guess = "2.0"
anyhow = "1.0"
base64="0.21"
cookie = "0.17"
percent-encoding = "2.1"
tokio-rustls = { version = "0.23.4" }
num_cpus = "1.8"
pin-project-lite = "0.2.7"
sync_wrapper = "0.1.1"

tokio = { version = "1.28", features = ["net", "rt-multi-thread", "time", "fs", "io-util"] }

crossbeam-epoch = "0.9.13"
mimalloc = { version = "0.1.32", default-features = false }
num-traits = "0.2"


[dev-dependencies]
rand = "0.8.5"