[package]
name = "gotham_examples_handlers_stateful"
description = "An example of using stateful handlers with the Gotahm web framework"
version = "0.0.0"
authors = ["Daniel Wagner-Hall <dawagner@gmail.com>"]
publish = false
edition = "2018"

[dependencies]
atom-core = { path = "../../../atom-core" }

futures-util = "0.3.14"
